2014-08-03  Jiang Jiang  <gzjjgod@gmail.com>

	* tt_cmap.c (sfnt_get_glyphname, handle_subst_glyphs): Fix error on
	glyph name lookup.

2014-08-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfobj.c: Fix a typo in check_for_pdf().

2014-08-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Fix a bug in unicode encoding in CFF/OpenType fonts.

2014-08-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* type0.c: Fix a bug in Type0Font_clean (Type0Font *font).

2014-07-30  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c, dvicodes.h: Support TeX-XeT's begin_reflect and end_reclect
	opcodes in dvipdfmx.

	* dvi.c (dvi_set, do_glyph_array): Use dvi_right to ensure
	consistency.

2014-07-29  Khaled Hosny  <khaledhosny@eglug.org>

	* spc_pdfm.c: remove the #ifdef ENABLE_TOUNICODE as it is always true.
	* spc_pdfm.c: rename my_parse_pdf_dict to
	parse_pdf_dict_with_tounicode.

	* dvipdfmx.c, dvi.c: Always accept .xdv file extension.
	* dvipdfmx.c: Remove some unnecessary is_xetex checks.
	* dvipdfmx.c: Allow DVIPDFM emulation mode even with xdvipdfmx, there
	is no much gain from not doing so.
	* pdfnames.c: Remove wrong is_xetex check.

	* dvi.c, dvipdfmx.c, dvipdfmx.h, spc_pdfm.c: Rename is_xetex to is_xdv
	and set it to 1 when DVI id equals XDV_ID.

	* pdfdev.c (pdf_dev_locate_font): Don't crash if mrec is None.
	* dvipdfm.test, xdvipdfm.test, Makefile.am: Test the above bug.
	* tests/xbmc.{dvi,tex}, tests/xbmc10.{600pk,tfm}: New test data.

2014-07-28  Jiang Jiang  <gzjjgod@gmail.com>

	* dpxfile.c (qcheck_filetype): Skip opening non-existent file.

	* tt_cmap.c (lookup_cmap12): Fix a compiler warning when trying to
	  compare unsigned value with 0.

2014-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* type0.c (Type0Font_*_ToUnicode_stream): Declare once as static
	(once again!).

2014-07-28  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c (do_pic_file): Don't insert the pic file while skimming
	reflected segments.
